--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,9 @@
 .default {
   @apply font-medium tracking-wide text-white transition-colors duration-200 hover:text-orange-400;
 }
+
+@layer utilities {
+  .title-text {
+    @apply animate-text bg-gradient-to-r from-red-600 via-orange-400 to-green-400 bg-clip-text text-transparent font-black;
+  }
+}
