--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 }
 
 .default {
-  @apply font-medium tracking-wide text-primary-content transition-colors duration-200 hover:text-accent-focus;
+  @apply font-medium tracking-wide dark:text-red-300 text-base-content transition-colors duration-200 hover:text-accent-focus;
 }
 .drawer-side a.active {
   color: orange;
